--- a/homepage.html
+++ b/homepage.html
@@ -92,7 +92,7 @@
           var marker = new google.maps.Marker({position: mtRecommend, map: map});
       }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXsOmCsjpRRSE68e7KohRY2WjQTuAiq3E&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=<INSERT_GMAPS_KEY>&callback=initMap"
     async defer></script>
   </body>
 </html>
